<resources>
    <string name="app_name">Android Internals</string>
    <string name="app_email">tamal.nath@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="heading">Heading</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="loading">Loading&#8230;</string>
    <string name="ok">OK</string>
    <string name="unknown">Unknown</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_build">Build</string>
    <string name="build_build">Build Information</string>
    <string name="build_environment">Environment Variables</string>
    <string name="build_properties">System Properties</string>

    <string name="fragment_fonts">Fonts</string>
    <string name="font_details">Font Details</string>
    <string name="fonts_family">Font Family</string>
    <string name="fonts_lang">Language</string>
    <string name="fonts_variant">Font variant</string>
    <string name="fonts_file">Font File</string>
    <string name="fonts_weight">Weight</string>
    <string name="fonts_style">Style</string>
    <string name="fonts_sample">The quick brown fox jumps over the lazy dog.</string>

    <string name="fragment_sensors">Sensors</string>
    <string name="sensor_unit_ms2">m/s&#178;</string>
    <string name="sensor_unit_ut">&#181;T</string>
    <string name="sensor_unit_rad">rad/s</string>
    <string name="sensor_unit_deg">&#176;</string>
    <string name="sensor_unit_lx">lux</string>
    <string name="sensor_unit_cm">cm</string>
    <string name="sensor_unit_pascal">hPa</string>
    <string name="sensor_unit_percent">%</string>
    <string name="sensor_unit_centigrade">&#176;C</string>
    <string name="sensor_unit_step">steps</string>
    <string name="sensor_value_unit">%1$ .2f %2$s</string>
    <string name="sensor_values_xyz_unit">x=%1$ .2f%4$s, y=%2$ .2f%4$s, z=%3$ .2f%4$s</string>
    <string name="sensor_values_magnetic_field_uncalibrated">Geometric: x=%1$ .2f, y=%2$ .2f, z=%3$ .2f &#181;T\nIron bias: x=%4$ .2f, y=%5$ .2f, z=%6$ .2f &#181;T</string>
    <string name="sensor_values_gyroscope_uncalibrated">Rotation: x=%1$ .2f, y=%2$ .2f, z=%3$ .2f rad/s\nDrift: x=%4$ .2f, y=%5$ .2f, z=%6$ .2f rad/s</string>
    <string name="sensor_values_no_value">Event triggered at: %1$tH:%1$tM:%1$tS</string>
    <string name="sensor_value_near">near</string>
    <string name="sensor_value_far">far</string>
    <string name="sensor_type_unknown">Unknown (%1$d)</string>
    <string name="sensor_id">ID</string>
    <string name="sensor_name">Name</string>
    <string name="sensor_type">Type</string>
    <string name="sensor_vendor">Vendor</string>
    <string name="sensor_version">Version</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_power_unit">%1$f mA</string>
    <string name="sensor_delay">Delay</string>
    <string name="sensor_min_delay_unit">Min: %1$d ms</string>
    <string name="sensor_delay_unit">Min: %1$d ms, Max: %2$d ms</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="sensor_resolution_unit">%1$f %2$s</string>
    <string name="sensor_max_range">Maximum Range</string>
    <string name="sensor_reserved_event">Reserved Events</string>
    <string name="sensor_max_event">Maximum Events</string>
    <string name="sensor_event_unit">%1$d/sec</string>
    <string name="sensor_dynamic">Is Dynamic</string>
    <string name="sensor_wake_up">Is Wake Up</string>
    <string name="sensor_additional_info">Additional Information</string>
    <string name="sensor_reporting_mode">Reporting Mode</string>
    <string name="sensor_accuracy">Accuracy</string>
    <string name="sensor_timestamp">Delay</string>
    <string name="sensor_start">Started %1$d sensors in %2$d ms.</string>
    <string name="sensor_stop">Stopped %1$d sensors in %2$d ms.</string>

    <string name="fragment_battery">Battery</string>
    <string name="battery_present">Battery Present</string>
    <string name="battery_status">Battery Status</string>
    <string name="battery_health">Battery Health</string>
    <string name="battery_plugged">Battery Plugged</string>
    <string name="battery_plugged_unplugged">Not Plugged</string>
    <string name="battery_charge">Battery Charged</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="battery_temperature">Battery Temperature</string>
    <string name="battery_technology">Battery Technology</string>

    <string name="fragment_location">Location</string>
    <string name="location_permission">Please grant the location permission!</string>
    <string name="location_lat_lon">Latitude: %1$s\nLongitude: %2$s\nTime: %3$s</string>
    <string name="location_request">Requesting location from %1$s provider.</string>
    <string name="location_enabled">%1$s provider enabled.</string>
    <string name="location_disabled">%1$s provider disabled.</string>
    <string name="location_changed">Status for %1$s provider has changed to %2$s.</string>

</resources>
