<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/font_family_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fonts_family"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/font_family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <TextView
        android:id="@+id/font_lang_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fonts_lang"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/font_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <TextView
        android:id="@+id/font_variant_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fonts_variant"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/font_variant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <TextView
        android:id="@+id/font_file_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fonts_file"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/font_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <TextView
        android:id="@+id/font_weight_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fonts_weight"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/font_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <TextView
        android:id="@+id/font_style_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fonts_style"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <EditText
        android:id="@+id/font_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fonts_sample"
        android:inputType="text" />

</LinearLayout>
