<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensor_id_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_id"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_type"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_vendor_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_vendor"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_vendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_version_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_version"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_power_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_power"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_delay_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_delay"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_resolution_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_resolution"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_max_range_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_max_range"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_max_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_reserved_event_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_reserved_event"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_reserved_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_max_event_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_max_event"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_max_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_dynamic_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_dynamic"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_dynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_wake_up_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_wake_up"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_wake_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_additional_info_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_additional_info"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_additional_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_reporting_mode_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_reporting_mode"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/sensor_reporting_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </LinearLayout>

</ScrollView>
